--- a/templates/result.html
+++ b/templates/result.html
@@ -3,6 +3,18 @@
 <h1> Final results</h1>
 
 <body>
-    The output is {{result}}
+<table border =2 >
+    {% for key,value in result.items() %}
+  <!-- {% if result>=50 %}
+     <h1>Your result is passed</h1>
+     {% else %}
+     <h1>Your result is failed</h1>
+     {% endif %} -->
+    <tr>
+        <th>{{key}}</th>
+        <th>{{value}}</th>
+    </tr>
+ {% endfor % }
+</table>
 </body>
 </html>
